Updated About Me and more

--- a/index.html
+++ b/index.html
@@ -100,31 +100,33 @@
                 <header>
                     <h2>About me</h2>
                 </header>
-                <p>
-                    I love collecting and analyzing how all my personal data (including fitness, nutrition, sleep,
-                    location history, and more) interact with one another. To that end, my personal goal is to improve
-                    everyone’s daily lives by combining all their data and helping them make sense of it. To pursue this
-                    goal further, I am studying Computer Science (with a focus on Machine Learning) in the Master
-                    of Engineering program at UC Berkeley.
+                <p>Eleven years ago, I developed my first computer program, a basic calculator, in C# and I was hooked
+                    right away. Over the years, I worked as a Software Engineer for two years and published an iOS app.
+                    My undergraduate Statistics minor changed the way I think about data and since then, I have enjoyed
+                    analyzing how my personal data (such as sleep, nutrition, and running pace) interact with one
+                    another. I started learning about Machine Learning soon after as it gave me a unique opportunity to
+                    apply my statistics knowledge in combination with my software engineering skills. To learn more
+                    about this field, I am studying Machine Learning in the Master of Engineering program at UC
+                    Berkeley.
                 </p>
                 <p>
-                    Over Summer 2019, I interned at a startup as a Machine Learning Engineering Intern and trained image
-                    classification models in TensorFlow to predict a hospital bed’s patient-occupancy score. I collected
-                    training data by scraping images and converting YouTube videos using my OpenCV-based video
-                    annotation tool. I also generated 40k randomized synthetic training images after learning to use
-                    Blender. I improved my model using computer vision techniques with transfer learning on InceptionV3.
+                    During my summer 2019 internship at an early-stage startup, I learned about and used new techniques
+                    of modeling and data collection to build on my existing machine learning knowledge. My tasks
+                    involved training image classification models with TensorFlow to predict a hospital bed’s
+                    patient-occupancy score and collecting training data by scraping images and converting YouTube
+                    videos using a video annotation tool that I built with OpenCV.
                 </p>
                 <p>
-                    The MEng program focuses extensively on technical leadership in the industry and so, I am taking
-                    courses about Machine Learning, Deep RL, and ML Systems. In Fall 2019, I am researching traffic
-                    light coordination using Deep RL.
+                    At UC Berkeley, my team is researching traffic light coordination using deep reinforcement learning
+                    with an open-source traffic control framework called Flow. Our work, in improving Flow over the past
+                    year, has allowed me to apply the new skills that I learned in technical courses such as Machine
+                    Learning Systems and Deep Reinforcement Learning.
                 </p>
                 <p>
-                    In 2017, I published an iOS app called Drinks Tracker on the App Store based on an observation that
-                    I made a couple of years ago during my undergraduate years at The Ohio State University. In early
-                    2018, I was working on integrating drink suggestions using machine learning in my app (to
-                    automatically suggest drinks to users based on their preferences and drink history) when Apple
-                    removed this category of apps from the App Store.
+                    In 2017, I published an iOS app called Drinks Tracker on the App Store. I created an algorithm that
+                    calculates the user’s BAC level based on multiple metrics, which the app used to notify the user
+                    about their estimated Blood Alcohol Content (BAC) level. The app was installed by over 3.9k users
+                    and got 104k impressions when Apple removed this category of apps from the App Store.
                 </p>
                 <p>
                     My current fitness goal is to complete a 7.5 mile run in an hour. Currently, I am two minutes away
@@ -175,9 +177,9 @@
                         <p>2017 – 2018</p>
                     </a>
                 </header>
-                App uses an algorithm to notify the user about their estimated Blood Alcohol Content (BAC) level
+                Created an algorithm that calculates the user’s BAC level based on multiple metrics
                 <br><br>
-                Created a custom algorithm that calculates the user’s BAC level based on multiple metrics
+                Notifies the user about their estimated Blood Alcohol Content (BAC) level
                 <br><br>
                 Installed by 3.9k+ users with 104k+ impressions
                 <header>
