Updated app details

--- a/index.html
+++ b/index.html
@@ -177,11 +177,12 @@
                         <p>2017 – 2018</p>
                     </a>
                 </header>
-                Created an algorithm that calculates the user’s BAC level based on multiple metrics
+                In 2017, I published an iOS app called Drinks Tracker on the App Store. I created an algorithm that
+                calculates the user’s BAC level based on multiple metrics, which the app used to notify the user about
+                their estimated Blood Alcohol Content (BAC) level. The app was installed by over 3.9k users and got 104k
+                impressions when Apple removed this category of apps from the App Store in 2018.
                 <br><br>
-                Notifies the user about their estimated Blood Alcohol Content (BAC) level
-                <br><br>
-                Installed by 3.9k+ users with 104k+ impressions
+                This project was uploaded to GitHub in 2019.
                 <header>
                     <h2>Completed the <i>Machine Learning by Stanford</i> course</h2>
                     <h4>Taught by Andrew Ng, Co-founder, Coursera and Adjunct Professor, Stanford University</h4>
@@ -304,18 +305,23 @@
 
             <!-- App -->
             <article id="app" class="panel">
-                <a target="_blank"
-                    href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8">
+                <a target="_blank" href="https://github.com/umangs94/drinks-tracker-ios">
                     <header>
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png"
                             alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
                     </header>
+                    <p>In 2017, I published an iOS app called Drinks Tracker on the App Store. I created an algorithm
+                        that calculates the user’s BAC level based on multiple metrics, which the app used to notify the
+                        user about their estimated Blood Alcohol Content (BAC) level. The app was installed by over 3.9k
+                        users and got 104k impressions when Apple removed this category of apps from the App Store in
+                        2018.
+                    </p>
+                    <p>This project was uploaded to <a target="_blank"
+                            href="https://github.com/umangs94/drinks-tracker-ios">GitHub</a> in 2019.</p>
+                    <h3>App Store Description</h3>
                     <p>Drinks Tracker allows you to search a list of nearly 4,000 drinks and easily add drinks to track
-                        your
-                        Blood Alcohol Content (BAC) percentage.</p>
-                    <h3>Installed by 3.9k users with 104k impressions</h3>
-                    <h5 style="color:grey">Not currently available</h5>
+                        your Blood Alcohol Content (BAC) percentage.</p>
                     <br /><br />
                     <img class="image web" style="max-width:200px" src="images/screenshot1.jpg" alt="Drinks Tracker">
                     <img class="image web" style="max-width:200px" src="images/screenshot2.jpg" alt="Drinks Tracker">
