--- a/index.html
+++ b/index.html
@@ -314,9 +314,7 @@
                     <p>In 2017, I published an iOS app called Drinks Tracker on the App Store. I created an algorithm
                         that calculates the user’s BAC level based on multiple metrics, which the app used to notify the
                         user about their estimated Blood Alcohol Content (BAC) level.</p>
-                    <p>The app was installed by over 3.9k
-                        users and got 104k impressions when Apple removed this category of apps from the App Store in
-                        2018.</p>
+                    <p>The app was installed by over <strong>3.9k users and got 104k impressions</strong> when Apple removed this category of apps from the App Store in 2018.</p>
                     <a target="_blank" href="https://github.com/umangs94/drinks-tracker-ios">
                         <img class="image" style="max-width: 50px;"
                             src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
@@ -326,7 +324,7 @@
                     <h3>App Store Description</h3>
                     <p>Drinks Tracker allows you to search a list of nearly 4,000 drinks and easily add drinks to track
                         your Blood Alcohol Content (BAC) percentage.</p>
-                    <br /><br />
+                    <br>
                     <img class="image web" style="max-width:200px" src="images/screenshot1.jpg" alt="Drinks Tracker">
                     <img class="image web" style="max-width:200px" src="images/screenshot2.jpg" alt="Drinks Tracker">
                     <img class="image web" style="max-width:200px" src="images/screenshot3.jpg" alt="Drinks Tracker">
