Added GitHub link

--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
                 their estimated Blood Alcohol Content (BAC) level. The app was installed by over 3.9k users and got 104k
                 impressions when Apple removed this category of apps from the App Store in 2018.
                 <br><br>
-                This project was uploaded to GitHub in 2019.
+                <a target="_blank" href="https://github.com/umangs94/drinks-tracker-ios">
+                    <img class="image" style="max-width: 50px;"
+                        src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
+                        alt='GitHub'>
+                    This project was uploaded to GitHub in 2019.
+                </a>
                 <header>
                     <h2>Completed the <i>Machine Learning by Stanford</i> course</h2>
                     <h4>Taught by Andrew Ng, Co-founder, Coursera and Adjunct Professor, Stanford University</h4>
