--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <br><br>
                 <a target="_blank" href="https://github.com/umangs94/drinks-tracker-ios">
                     <img class="image" style="max-width: 50px;"
-                        src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
-                        alt='GitHub'>
+                        src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' alt='GitHub'>
+                    <br>
                     This project was uploaded to GitHub in 2019.
                 </a>
                 <header>
@@ -319,7 +319,8 @@
                     <p>In 2017, I published an iOS app called Drinks Tracker on the App Store. I created an algorithm
                         that calculates the user’s BAC level based on multiple metrics, which the app used to notify the
                         user about their estimated Blood Alcohol Content (BAC) level.</p>
-                    <p>The app was installed by over <strong>3.9k users and got 104k impressions</strong> when Apple removed this category of apps from the App Store in 2018.</p>
+                    <p>The app was installed by over <strong>3.9k users and got 104k impressions</strong> when Apple
+                        removed this category of apps from the App Store in 2018.</p>
                     <a target="_blank" href="https://github.com/umangs94/drinks-tracker-ios">
                         <img class="image" style="max-width: 50px;"
                             src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png'
