Post-graduation updates

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     analyzing how my personal data (such as sleep, nutrition, and running pace) interact with one
                     another. I started learning about Machine Learning soon after as it gave me a unique opportunity to
                     apply my statistics knowledge in combination with my software engineering skills. To learn more
-                    about this field, I am studying Machine Learning in the Master of Engineering program at UC
+                    about this field, I studied Machine Learning in the Master of Engineering program at UC
                     Berkeley.
                 </p>
                 <p>
@@ -117,7 +117,7 @@
                     videos using a video annotation tool that I built with OpenCV.
                 </p>
                 <p>
-                    At UC Berkeley, my team is researching traffic light coordination using deep reinforcement learning
+                    At UC Berkeley, my team researched traffic light coordination using deep reinforcement learning
                     with an open-source traffic control framework called Flow. Our work, in improving Flow over the past
                     year, has allowed me to apply the new skills that I learned in technical courses such as Machine
                     Learning Systems and Deep Reinforcement Learning.
@@ -137,7 +137,7 @@
                     Trek and Doctor Who. 🖖
                 </p>
                 <p>
-                    After I graduate in December 2019, I want to work as a Machine Learning Engineer, ideally in the Bay
+                    Currently, I want to work as a Machine Learning Engineer, in the Bay
                     Area, to make better use of all the data that we generate every day.
                 </p>
             </article>
@@ -145,9 +145,9 @@
             <!-- Projects -->
             <article id="projects" class="panel">
                 <header>
-                    <h2>Currently researching traffic light coordination using Deep Reinforcement Learning</h2>
+                    <h2>Researched traffic light coordination using Deep Reinforcement Learning</h2>
                     <h4><i>with Prof. Alexandre Bayen</i></h4>
-                    <p>August 2019 – present</p>
+                    <p>Fall 2019</p>
                 </header>
                 Worked in a team to improve an open-source traffic control framework called Flow
                 <br><br>
@@ -364,8 +364,8 @@
                     <header>
                         <h2>Contact me</h2>
                     </header>
-                    <p>I am interested in Machine Learning Engineering positions starting January 2020 after I graduate
-                        from UC Berkeley in December.
+                    <p>Currently, I want to work as a Machine Learning Engineer, in the Bay Area, to make better use of
+                        all the data that we generate every day.
                     </p>
                 </a>
             </article>
